# lips

./: .gitignore  LICENSE  README.md  lips.cabal
src/app/: Main.hs
src/lib/Language/Lips/: Base.hs  Error.hs  Evaluator.hs  Language.hs  LanguageDef.hs  Parser.hs  REPL.hs  State.hs  Static.hs
