name:             lips
version:          0.1.0.0
author:           Cerek 'Crockeo' Hillen
maintainer:       crockeo@gmail.com
synopsis:         A lisp-like language.
build-type:       Simple
cabal-version: >= 1.10

library
  default-extensions: OverloadedStrings

  hs-source-dirs: src/lib/Language/Lips/

  default-language: Haskell2010

  build-depends: base == 4.6.*
               , attoparsec
               , text
               , mtl

executable lips
  default-extensions: OverloadedStrings

  hs-source-dirs: src/app/

  main-is: Main.hs

  build-depends: base == 4.6.*
               , lips

  default-language: Haskell2010
