name:             lips
version:          0.1.0.0
author:           Cerek 'Crockeo' Hillen
maintainer:       crockeo@gmail.com
synopsis:         A lisp-like language.
build-type:       Simple
cabal-version: >= 1.10

library
  default-extensions: OverloadedStrings

  hs-source-dirs: src/lib/

  exposed-modules: Language.Lips.LanguageDef
                 , Language.Lips.Evaluator
                 , Language.Lips.Parser
                 , Language.Lips.Static
                 , Language.Lips.REPL

  default-language: Haskell2010

  build-depends: base == 4.6.*
               , parsec
               , text
               , mtl

executable lips
  default-extensions: OverloadedStrings

  hs-source-dirs: src/app/

  main-is: Main.hs

  build-depends: base == 4.6.*
               , lips

  default-language: Haskell2010
